fix spacing and color issues

--- a/_sass/temple/_header.scss
+++ b/_sass/temple/_header.scss
@@ -250,6 +250,7 @@ div.college-nav {
     display: inline-block;
     a {
       display: inline-block;
+      padding-top: .5em;
       i.material-icons {
         font-size: 24px;
         margin-right: 0;
