--- a/_sass/temple/_overrides.scss
+++ b/_sass/temple/_overrides.scss
@@ -8,6 +8,7 @@ b, strong {
   font-weight: bold;
 }
 a {
+  color: $primary-color-dark;
   &:hover {
     text-decoration: underline;
   }
@@ -231,4 +232,8 @@ header {
 // Waves
 .waves-effect {
   display: inherit;
+}
+// Nav icon positioning
+.input-field label:not(.label-icon).active {
+  transform: translateY(4px) scale(0.8);
 }
